--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <form>
-  <input name="mensaje" id="mensaje" type="text" placeholder="(Ingrese su mensaje aquí)" required />
-  <input name="firma" id="firma" type="text" placeholder="(Ingrese su firma aquí)" required />
+  <input name="mensaje" id="mensaje" type="text" placeholder="(Ingrese su mensaje aquí)" maxlength="140" required />
+  <input name="firma" id="firma" type="text" placeholder="(Ingrese su firma aquí)" maxlength="25" required />
   <input type="submit" value="enviar" />
 </form>
 
@@ -8,20 +8,15 @@
   <thead>
     <tr>
       <td>fecha</td>
-      <td>mensaje</td>
+      <td>mensaje <input ng-model="query" placeholder="buscar..." /></td>
       <td>autor</td>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>03/04/2014</td>
-      <td>Aquí va el mensaje máximo 10 caracteres.</td>
-      <td>firma 25 cars</td>
-    </tr>
-    <tr>
-      <td>03/04/2014</td>
-      <td>Aquí va el mensaje máximo 10 caracteres.</td>
-      <td>firma 25 cars</td>
+    <tr ng-repeat="mensaje in mensajes | filter:query">
+      <td>{{mensaje.fecha}}</td>
+      <td>{{mensaje.texto}}</td>
+      <td>{{mensaje.autor}}</td>
     </tr>
   </tbody>
 </table>
