--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -60,6 +60,12 @@ table {
     }
 }
 
+#marquesina {
+    left: 0;
+    position: absolute;
+    top:20px;
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .container {
