--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,14 +2,18 @@
   <span ng-repeat="mensaje in mensajes">{{mensaje.texto}} - {{mensaje.autor}}  </span>
 </header>
 
-<ul class="nav nav-pills pull-right">
-  <li><a ng-href="/#/input">Input</a></li>
-</ul>
+
+<nav id="nav_main">
+  <ul>
+    <li><a ng-href="/#/input">input!</a></li>
+  </ul>
+</nav>
 
 <form>
-  <input name="mensaje" id="mensaje" type="text" placeholder="(Ingrese su mensaje aquí)" maxlength="140" required />
-  <input name="firma" id="firma" type="text" placeholder="(Ingrese su firma aquí)" maxlength="25" required />
-  <input type="submit" value="enviar" />
+  <input name="texto" id="texto" type="text" placeholder="(Ingrese su mensaje aquí)" maxlength="140" required />
+  <input name="autor" id="autor" type="text" placeholder="(Ingrese su firma aquí)" maxlength="25" required />
+  <input type="hidden" id="fecha" value="2014/04/10" />
+  <input id="submit" type="submit" value="enviar" />
 </form>
 
 <table>
