--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,7 +6,7 @@
 
   <nav id="nav_main">
     <ul>
-      <li><a ng-href="/#/input">input!</a></li>
+      <li><a ng-href="#/input">input!</a></li>
     </ul>
   </nav>
 
