--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,7 +11,7 @@
     <input type="hidden" id="fecha" value="{{datetime.time | amDateFormat:'dddd, MMMM Do YYYY, h:mm:ss a'}}" ng-model="formData.date" />
     <input id="submit" type="submit" value="enviar" />
     -->
-        <input type="hidden" id="fecha" value="{{datetime.time }}" ng-model="formData.date" />
+        <input type="hidden" id="fecha" value="{{message.time | amDateFormat:'dddd, MMMM Do YYYY, h:mm:ss a'}}" ng-model="formData.date" />
     <input id="submit" type="submit" value="enviar" />
   </form>
 
